--- a/isa.yaml
+++ b/isa.yaml
@@ -1,8 +1,13 @@
 description: SEB ISA
 general:
   min_version: 0.1.4
-  endian: little
-  address_size: 4
+  endian: big
+  address_size: 16
+  registers:
+    - a
+    - b
+    - c
+    - d
   identifier:
     name: seb-isa
     version: "1.0.0"
@@ -14,8 +19,38 @@ operand_sets:
         type: numeric
         argument:
           size: 8
-          byte_align: false
-  rom_address:
+          byte_align: true
+  register:
+    operand_values:
+      register_a:
+        type: register
+        register: a
+        bytecode:
+          value: 0
+          size: 2
+          position: suffix
+      register_b:
+        type: register
+        register: b
+        bytecode:
+          value: 1
+          size: 2
+          position: suffix
+      register_c:
+        type: register
+        register: c
+        bytecode:
+          value: 2
+          size: 2
+          position: suffix
+      register_d:
+        type: register
+        register: d
+        bytecode:
+          value: 3
+          size: 2
+          position: suffix
+  address:
     operand_values:
       addr:
         type: numeric
@@ -23,6 +58,36 @@ operand_sets:
           size: 16
           byte_align: false
 instructions:
+  sub:
+    byte_code:
+      value: 2
+      size: 4
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - register
+  add:
+    byte_code:
+      value: 3
+      size: 4
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - register
+  mv:
+    byte_code:
+      value: 4
+      size: 4
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - register
   mvay:
     byte_code:
       value: 15
@@ -30,10 +95,6 @@ instructions:
   mvax:
     byte_code:
       value: 14
-      size: 8
-  mvza:
-    byte_code:
-      value: 22
       size: 8
   hlt:
     byte_code:
@@ -43,24 +104,44 @@ instructions:
     byte_code:
       value: 7
       size: 8
-  ldai:
+  ldi:
     byte_code:
-      value: 2
+      value: 24
+      size: 6
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - integer
+  ld:
+    byte_code:
+      value: 28
+      size: 6
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - address
+  ldidx:
+    byte_code:
+      value: 32
       size: 8
     operands:
       count: 1
       operand_sets:
         list:
-          - integer
-  ldbi:
+          - address
+  ldo:
     byte_code:
-      value: 4
+      value: 33
       size: 8
     operands:
       count: 1
       operand_sets:
         list:
-          - integer
+          - address
   andi:
     byte_code:
       value: 23
@@ -79,21 +160,27 @@ instructions:
       operand_sets:
         list:
           - integer
+  addi:
+    byte_code:
+      value: 23
+      size: 6
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - integer
   nop:
     byte_code:
       value: 1
       size: 8
+  ldao:
+    byte_code:
+      value: 34
+      size: 8
   ret:
     byte_code:
       value: 17
-      size: 8
-  subb:
-    byte_code:
-      value: 18
-      size: 8
-  addb:
-    byte_code:
-      value: 6
       size: 8
   xorb:
     byte_code:
@@ -103,6 +190,26 @@ instructions:
     byte_code:
       value: 20
       size: 8
+  irq:
+    byte_code:
+      value: 26
+      size: 8
+  reti:
+    byte_code:
+      value: 27
+      size: 8
+  mvia:
+    byte_code:
+      value: 28
+      size: 9
+  sie:
+    byte_code:
+      value: 30
+      size: 8
+  cie:
+    byte_code:
+      value: 29
+      size: 8
   call:
     byte_code:
       value: 16
@@ -111,7 +218,17 @@ instructions:
       count: 1
       operand_sets:
         list:
-          - rom_address
+          - address
+  st:
+    byte_code:
+      value: 22
+      size: 6
+    operands:
+      count: 2
+      operand_sets:
+        list:
+          - register
+          - address
   jmp:
     byte_code:
       value: 12
@@ -120,7 +237,7 @@ instructions:
       count: 1
       operand_sets:
         list:
-          - rom_address
+          - address
   jmpz:
     byte_code:
       value: 21
@@ -129,4 +246,4 @@ instructions:
       count: 1
       operand_sets:
         list:
-          - rom_address
+          - address
