--- a/isa.yaml
+++ b/isa.yaml
@@ -53,14 +53,37 @@ operand_sets:
   address:
     operand_values:
       addr:
-        type: numeric
+        type: indirect_numeric
         argument:
           size: 16
           byte_align: false
 instructions:
+  push:
+    byte_code:
+      value: 19
+      size: 6
+    operands:
+      count: 1
+      operand_sets:
+        list:
+          - register 
+  pop:
+    byte_code:
+      value: 18
+      size: 6
+    operands:
+      count: 1
+      operand_sets:
+        list:
+          - register 
+    variants:
+      - var1:
+        byte_code:
+          value: 6
+          size: 8
   sub:
     byte_code:
-      value: 2
+      value: 13
       size: 4
     operands:
       count: 2
@@ -68,9 +91,30 @@ instructions:
         list:
           - register
           - register
+    variants:
+      - var1:
+        byte_code:
+          value: 21
+          size: 6
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - address
+      - var2:
+        byte_code:
+          value: 20
+          size: 6
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - integer
   add:
     byte_code:
-      value: 3
+      value: 14
       size: 4
     operands:
       count: 2
@@ -78,16 +122,27 @@ instructions:
         list:
           - register
           - register
-  mv:
-    byte_code:
-      value: 4
-      size: 4
-    operands:
-      count: 2
-      operand_sets:
-        list:
-          - register
-          - register
+    variants:
+      - var1:
+        byte_code:
+          value: 26
+          size: 6
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - address
+      - var2:
+        byte_code:
+          value: 27
+          size: 6
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - integer
   mvay:
     byte_code:
       value: 15
@@ -104,19 +159,9 @@ instructions:
     byte_code:
       value: 7
       size: 8
-  ldi:
-    byte_code:
-      value: 24
-      size: 6
-    operands:
-      count: 2
-      operand_sets:
-        list:
-          - register
-          - integer
   ld:
     byte_code:
-      value: 28
+      value: 25
       size: 6
     operands:
       count: 2
@@ -124,6 +169,27 @@ instructions:
         list:
           - register
           - address
+    variants:
+      - var1:
+        byte_code:
+          value: 24
+          size: 6
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - integer
+      - var1:
+        byte_code:
+          value: 12
+          size: 4
+        operands:
+          count: 2
+          operand_sets:
+            list:
+              - register
+              - register
   ldidx:
     byte_code:
       value: 32
@@ -145,15 +211,6 @@ instructions:
   andi:
     byte_code:
       value: 23
-      size: 8
-    operands:
-      count: 1
-      operand_sets:
-        list:
-          - integer
-  subi:
-    byte_code:
-      value: 24
       size: 8
     operands:
       count: 1
@@ -192,16 +249,16 @@ instructions:
       size: 8
   irq:
     byte_code:
-      value: 26
+      value: 127
       size: 8
   reti:
     byte_code:
-      value: 27
+      value: 126
       size: 8
   mvia:
     byte_code:
       value: 28
-      size: 9
+      size: 8
   sie:
     byte_code:
       value: 30
