--- a/isa.yaml
+++ b/isa.yaml
@@ -9,6 +9,8 @@ general:
     - c
     - d
     - o
+    - pa
+    - pb
     - aoh
     - aol
     - fpo
@@ -97,9 +99,23 @@ operand_sets:
     operand_values:
       register_o:
         type: register
-        register: o
+        register: pa
+        bytecode:
+          value: 7
+          size: 4
+          position: suffix
+      register_pa:
+        type: register
+        register: pb
         bytecode:
           value: 8
+          size: 4
+          position: suffix
+      register_pb:
+        type: register
+        register: o
+        bytecode:
+          value: 9
           size: 4
           position: suffix
   address:
