--- a/isa.yaml
+++ b/isa.yaml
@@ -8,6 +8,10 @@ general:
     - b
     - c
     - d
+    - e
+    - f
+    - g
+    - h
     - o
     - pa
     - pb
@@ -81,18 +85,46 @@ operand_sets:
           value: 4
           size: 4
           position: suffix
+      register_e:
+        type: register
+        register: e
+        bytecode:
+          value: 5
+          size: 4
+          position: suffix
+      register_f:
+        type: register
+        register: f
+        bytecode:
+          value: 6
+          size: 4
+          position: suffix
+      register_g:
+        type: register
+        register: g
+        bytecode:
+          value: 7
+          size: 4
+          position: suffix
+      register_h:
+        type: register
+        register: h
+        bytecode:
+          value: 8
+          size: 4
+          position: suffix
       register_aoh:
         type: register
         register: aoh
         bytecode:
-          value: 5
+          value: 9
           size: 4
           position: suffix
       register_aol:
         type: register
         register: aol
         bytecode:
-          value: 6
+          value: 10
           size: 4
           position: suffix
   wo_register:
@@ -101,21 +133,21 @@ operand_sets:
         type: register
         register: pa
         bytecode:
-          value: 7
+          value: 11
           size: 4
           position: suffix
       register_pa:
         type: register
         register: pb
         bytecode:
-          value: 8
+          value: 12
           size: 4
           position: suffix
       register_pb:
         type: register
         register: o
         bytecode:
-          value: 9
+          value: 13
           size: 4
           position: suffix
   address:
